--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="favicon.png">
     <link rel="stylesheet" href="style.css">
-    <title>Hello, There!</title>
+    <title>Hello, There!!</title>
 </head>
 <body>
     <!-- Main Section -->
